-Fix when importing 1.x databases containing a single quote in a media filename
 (reported by Jan Egil Hagen).
-Don't crash the SQL engine if you have more than 1000 tags (reported by Mats 
 Hansson).

Mnemosyne 2.3.1 : 2014-06-18

(Note that for Windows users we recommend uninstalling the previous version
before installing the new one.)

-Change database backend for config file. There should be no more errors
 which cause you to delete the config file.
-Don't import cherrypy if not using the sync server (workaround for mimetype
 bug in non-unicode systems) (reported by Steven Lee, Pete Kovalenko).
-Don't give spurious warning about different tags in different sister cards
 when creating new clozes when editing a card (reported by Scott Youngman).
-Fixed some issues with tabbing to buttons in a dialog not selecting the right
 button (reported by Scott Youngman).
 
Mnemosyne 2.3 : 2014-04-23


The sync protocol has changed in this version, so make sure you update both
the client and the server at the same time.

-A quick-and-dirty Android client is available, where you can do reviews in
 your mobile browser using a webserver which runs on your Android device.
 This client has full support for the syncing protocol.
-The functionality of mnemosyne-webserver has now been merged into the main
 program and can be activated through 'Configure Mnemosyne - servers'.
-Time to create backups has decreased, in some situations even by a factor 
 of 2 or more, speeding up syncing and program exit.
-Sped up all editing operations in the card browser.
-The name of the currently active saved set of cards is now listed in title
 bar (requested by Silverbear).
-Added new statistic: number of new cards learned per day.
-Also sync relevant settings (e.g. fonts, colours, ...) during the initial
 sync.
-Improve the timeout handling of the sync protocol.
-New Ukranian, Swedish, Serbian, Catalan translation.
-Fix erroneous 'Wrong username or password' error.